--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mysql2": "^3.14.3"
+    "mysql2": "^3.14.3",
+    "openai": "^6.9.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
